@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{71193761-C294-42BD-98C9-A4CC15577701}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -123,6 +123,9 @@
     <EmbeddedResource Include="Templates\Moonlight-LibraryProject.xpt.xml">
       <LogicalName>Moonlight-LibraryProject.xpt.xml</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="Templates\PreviewTemplate.html">
+      <LogicalName>PreviewTemplate.html</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="gtk-gui\generated.cs" />
@@ -159,5 +162,6 @@
         </MonoDevelop.Autotools.MakefileInfo>
       </Properties>
     </MonoDevelop>
+    <VisualStudio />
   </ProjectExtensions>
 </Project>
